# backend

./: .README.md.kate-swp  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.useCurrentArch  LICENSE  README.md  Revolt.test.toml  Revolt.toml  Rocket.toml  STYLE_GUIDE.md  build.sh  clippy.toml  compose.yml  default.nix  deny.toml  docker-compose.db.yml  docker-compose.yml  dump.rdb  essential_files.txt  install_revolt_server.sh  justfile  monitor.sh  publish.sh  remove.sh  repro.json  run.sh  set_version.sh
crates/bindings/node/: .gitignore  Cargo.toml  README.md  index.d.ts  package.json  pnpm-lock.yaml  test.js
crates/bindings/node/src/: lib.rs
crates/bonfire/: Cargo.toml  Dockerfile  LICENSE
crates/bonfire/.github/workflows/: docker.yml
crates/bonfire/src/: config.rs  database.rs  main.rs  websocket.rs
crates/bonfire/src/client/: core.rs  mod.rs  subscriber.rs  worker.rs
crates/bonfire/src/events/: impl.rs  mod.rs  state.rs
crates/bridges/discord/: Cargo.toml
crates/bridges/discord/src/: main.rs
crates/core/broker/: Cargo.toml
crates/core/broker/src/: lib.rs
crates/core/broker/src/event_stream/: consumer.rs  mod.rs  pool.rs  publish.rs
crates/core/coalesced/: Cargo.toml
crates/core/coalesced/src/: config.rs  error.rs  lib.rs  service.rs
crates/core/config/: Cargo.toml  LICENSE  Revolt.test.toml  Revolt.toml
crates/core/config/src/: lib.rs
crates/core/database/: Cargo.toml
crates/core/database/examples/: migrate.rs
crates/core/database/fixtures/: group_with_members.json  server_with_roles.json
crates/core/database/src/: lib.rs
crates/core/database/src/amqp/: amqp.rs  mod.rs
crates/core/database/src/drivers/: dummy.rs  mod.rs  mongodb.rs  reference.rs
crates/core/database/src/events/: client.rs  mod.rs  rabbit.rs  server.rs
crates/core/database/src/models/: mod.rs  relations.drawio
crates/core/database/src/tasks/: ack.rs  apple_notifications.rs  authifier_relay.rs  last_message_id.rs  mod.rs  process_embeds.rs  web_push.rs
crates/core/database/src/util/: basic.rs  bulk_permissions.rs  funcs.rs  idempotency.rs  iso_bson_chrono.rs  mod.rs  oauth2.rs  permissions.rs  reference.rs  test_fixtures.rs
crates/core/database/src/voice/: mod.rs  voice_client.rs
crates/core/database/templates/: deletion.html  deletion.original.html  deletion.txt  deletion.whitelabel.txt  policy-change.original.html  reset-existing.html  reset-existing.original.html  reset-existing.txt  reset.html  reset.original.html  reset.txt  reset.whitelabel.txt  suspension.html  suspension.original.html  suspension.txt  suspension.whitelabel.txt  verify.html  verify.original.html  verify.txt  verify.whitelabel.txt
crates/core/files/: Cargo.toml
crates/core/files/src/: lib.rs
crates/core/models/: Cargo.toml
crates/core/models/src/: bots.rs  lib.rs  users.rs
crates/core/models/src/admin_migrations/: mod.rs
crates/core/models/src/v0/: account_strikes.rs  admin.rs  authorized_bots.rs  bots.rs  channel_invites.rs  channel_unreads.rs  channel_webhooks.rs  channels.rs  embeds.rs  emojis.rs  files.rs  messages.rs  mod.rs  oauth2.rs  onboard.rs  policy_changes.rs  safety_reports.rs  server_bans.rs  server_members.rs  servers.rs  user_settings.rs  users.rs
crates/core/permissions/: Cargo.toml
crates/core/permissions/src/: impl.rs  lib.rs  test.rs  trait.rs
crates/core/permissions/src/models/: channel.rs  mod.rs  (+2 more)
crates/core/presence/: Cargo.toml
crates/core/presence/src/: lib.rs  operations.rs
crates/core/ratelimits/: Cargo.toml
crates/core/ratelimits/src/: axum.rs  lib.rs  ratelimiter.rs  rocket.rs
crates/core/result/: Cargo.toml
crates/core/result/src/: axum.rs  lib.rs  okapi.rs  rocket.rs
crates/core/voice/: Cargo.toml
crates/core/voice/src/: lib.rs
crates/daemons/crond/: Cargo.toml  Dockerfile
crates/daemons/crond/src/: main.rs
crates/daemons/pushd/: Cargo.toml  Dockerfile  Pushd Flowchart.graffle
crates/daemons/pushd/src/: main.rs
crates/daemons/voice-ingress/: Cargo.toml  Dockerfile
crates/daemons/voice-ingress/src/: api.rs  guard.rs  main.rs
crates/delta/: Cargo.toml  Dockerfile  LICENSE  build.rs
crates/delta/assets/templates/: welcome.html  welcome.txt
crates/delta/fixtures/: server_with_many_roles.json  server_with_roles.json
crates/delta/src/: main.rs  version.rs
crates/delta/src/routes/: mod.rs  root.rs  stats.rs
crates/delta/src/templates/: verify.html
crates/delta/src/util/: catchers.rs  idempotency.rs  json.rs  mod.rs  ratelimiter.rs  ratelimits.rs  regex.rs  test.rs
crates/pushd/: Cargo.toml
crates/pushd/src/: main.rs
crates/pushd/src/consumers/: mod.rs  origin.rs
crates/quark/: .gitignore  Cargo.toml  LICENSE
crates/quark/assets/: emojis.txt
crates/quark/assets/templates/: deletion.html  deletion.original.html  deletion.txt  reset.html  reset.original.html  reset.txt  verify.html  verify.original.html  verify.txt
crates/quark/examples/: test.rs
crates/quark/src/: database.rs  lib.rs
crates/quark/src/events/: client.rs  impl.rs  mod.rs  server.rs  state.rs
crates/quark/src/impl/: mod.rs  rocket.rs
crates/quark/src/models/: mod.rs  relations.drawio
crates/quark/src/permissions/: mod.rs
crates/quark/src/presence/: entry.rs  mod.rs  operations.rs
crates/quark/src/tasks/: ack.rs  last_message_id.rs  mod.rs  process_embeds.rs  web_push.rs
crates/quark/src/traits/: mod.rs
crates/quark/src/types/: january.rs  mod.rs  push.rs
crates/quark/src/util/: authifier.rs  log.rs  manipulation.rs  mod.rs  pfp.rs  rauth.rs  ref.rs  regex.rs  result.rs  value.rs
crates/quark/src/web/: cors.rs  idempotency.rs  mod.rs  ratelimiter.rs  swagger.rs
crates/services/autumn/: Cargo.toml  Dockerfile
crates/services/autumn/src/: api.rs  clamav.rs  exif.rs  main.rs  metadata.rs  mime_type.rs  ratelimits.rs
crates/services/gifbox/: Cargo.toml  Dockerfile
crates/services/gifbox/src/: api.rs  main.rs  ratelimits.rs  types.rs
crates/services/january/: Cargo.toml  Dockerfile
crates/services/january/src/: api.rs  main.rs  requests.rs  website_embed.rs
(+715 files in other folders)
