[package]
name = "revolt-bonfire"
version = "0.5.5"
license = "AGPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# util
log = "*"
once_cell = "1.9.0"

# parsing
querystring = "1.1.0"

# quark
revolt-quark = { path = "../quark" }

# serde
serde_json = "1.0.79"
rmp-serde = "1.0.0"
serde = "1.0.136"

# async
futures = "0.3.21"
async-tungstenite = { version = "0.17.0", features = ["async-std-runtime"] }
async-std = { version = "1.8.0", features = ["tokio1", "tokio02", "attributes"] }
