[package]
name = "revolt-bonfire"
version = "0.7.19"
license = "AGPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# util
log = "*"
sentry = "0.31.5"
lru = "0.7.6"
ulid = "0.5.0"
once_cell = "1.9.0"
redis-kiss = "0.1.4"
lru_time_cache = "0.11.11"
flume = { version = "0.11.0", features = ["async"] }

# parsing
querystring = "1.1.0"

# serde
bincode = "1.3.3"
serde_json = "1.0.79"
rmp-serde = "1.0.0"
serde = "1.0.136"

# async
futures = "0.3.21"
fastwebsockets = { version = "0.8.0", features = ["upgrade", "unstable-split"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "net"] }
hyper = "1.4.1"
http-body-util = "0.1.2"
hyper-util = "0.1.9"

# core
authifier = { version = "1.0.8" }
revolt-result = { path = "../core/result" }
revolt-models = { path = "../core/models" }
revolt-config = { path = "../core/config" }
revolt-database = { path = "../core/database" }
revolt-permissions = { version = "0.7.19", path = "../core/permissions" }
revolt-presence = { path = "../core/presence", features = ["redis-is-patched"] }

# redis
fred = { version = "8.0.1", features = ["subscriber-client"] }
