[package]
name = "revolt-delta"
version = "0.6.8"
license = "AGPL-3.0-or-later"
authors = ["Paul Makles <paulmakles@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Test
rand = "0.8.5"
redis-kiss = "0.1.4"

# Utility
lru = "0.7.0"
url = "2.2.2"
log = "0.4.11"
dotenv = "0.15.0"
dashmap = "5.2.0"
linkify = "0.6.0"
once_cell = "1.17.1"
env_logger = "0.7.1"

# Lang. Utilities
regex = "1"
num_enum = "0.5.1"
impl_ops = "0.1.1"
bitfield = "0.13.2"

# ID / key generation
ulid = "0.4.1"
nanoid = "0.4.0"

# serde
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }

# async
futures = "0.3.8"
chrono = "0.4.15"
async-channel = "1.6.1"
reqwest = { version = "0.11.4", features = ["json"] }
async-std = { version = "1.8.0", features = [
    "tokio1",
    "tokio02",
    "attributes",
] }

# internal util
lettre = "0.10.0-alpha.4"

# web
rocket = { version = "0.5.0-rc.2", default-features = false, features = [
    "json",
] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", rev = "c17e8145baa4790319fdb6a473e465b960f55e7c" }
rocket_empty = { version = "0.1.1", features = ["schema"] }
rocket_authifier = { version = "1.0.8" }
rocket_prometheus = "0.10.0-rc.3"

# spec generation
schemars = "0.8.8"
revolt_rocket_okapi = { version = "0.9.1", features = ["swagger"] }

# quark
revolt-quark = { path = "../quark" }

# core
authifier = "1.0.8"
revolt-config = { path = "../core/config" }
revolt-database = { path = "../core/database", features = [
    "rocket-impl",
    "redis-is-patched",
] }
revolt-models = { path = "../core/models", features = ["schemas", "validator"] }
revolt-result = { path = "../core/result", features = ["rocket", "okapi"] }
revolt-permissions = { path = "../core/permissions", features = ["schemas"] }

[build-dependencies]
vergen = "7.5.0"
