[package]
name = "revolt-delta"
version = "0.7.19"
license = "AGPL-3.0-or-later"
authors = ["Paul Makles <paulmakles@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Test
rand = "0.8.5"
redis-kiss = "0.1.4"

# Utility
lru = "0.12"
url = "2.2.2"
log = "0.4.11"
dotenvy = "0.15"
dashmap = "6"
linkify = "0.10"
once_cell = "1.17.1"
env_logger = "0.11"

# Lang. Utilities
regex = "1"
num_enum = "0.7"
impl_ops = "0.1.1"
bitfield = "0.17"

# ID / key generation
ulid = "1"
nanoid = "0.4.0"

# serde
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
iso8601-timestamp = { version = "0.3", features = [] }

# async
futures = "0.3.8"
chrono = "0.4.15"
async-channel = "2.3.1"
reqwest = { version = "0.12", features = ["json"] }
async-std = { version = "1.8.0", features = [
    "tokio1",
    "tokio02",
    "attributes",
] }

lettre = "0.11"

# web
rocket = { version = "0.5.1", default-features = false, features = ["json"] }
rocket_cors = "0.6"
rocket_empty = { version = "0.1.1", features = ["schema"] }
rocket_authifier = { version = "1.0.8" }
rocket_prometheus = "0.10.0-rc.3"

# spec generation
schemars = "0.8.8"
revolt_rocket_okapi = { version = "0.10", features = ["swagger"] }

# core
authifier = "1.0.8"
revolt-config = { path = "../core/config" }
revolt-database = { path = "../core/database", features = [
    "rocket-impl",
    "redis-is-patched",
] }
revolt-models = { path = "../core/models", features = [
    "schemas",
    "validator",
    "rocket",
] }
revolt-presence = { path = "../core/presence" }
revolt-result = { path = "../core/result", features = ["rocket", "okapi"] }
revolt-permissions = { path = "../core/permissions", features = ["schemas"] }

[build-dependencies]
vergen = "9"
# internal util
