[package]
name = "pushd"
version = "0.1.0"
edition = "2021"

[dependencies]
revolt-config = { version = "0.7.15", path = "../core/config" }
revolt-database = { version = "0.7.15", path = "../core/database" }
revolt-models = { version = "0.7.15", path = "../core/models", features = [
    "validator",
] }

tracing = "0.1"
tracing-subscriber = "0.1"
amqprs = { version = "1.7.0", features = ["traces"] }
fcm = "0.9.2"
web-push = "0.10.0"
revolt_a2 = { version = "0.10", default-features = false, features = ["ring"] }
tokio = "1.39.2"
async-trait = "0.1.81"
ulid = "1.0.0"

authifier = "1.0.8"

#serialization
serde_json = "1"
revolt_optional_struct = "0.2.0"
serde = { version = "1", features = ["derive"] }
iso8601-timestamp = { version = "0.2.10", features = ["serde", "bson"] }
