[package]
name = "revolt-config"
version = "0.7.19"
edition = "2021"
license = "MIT"
authors = ["Paul Makles <me@insrt.uk>"]
description = "Revolt Backend: Configuration"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
report-macros = ["revolt-result"]
test = ["async-std"]
default = ["test"]

[dependencies]
# Utility
dotenvy = "0.15"
config = "0.14"
cached = { version = "0.54", features = ["async"] }
once_cell = "1.18.0"

# Serde
serde = { version = "1", features = ["derive"] }

# Async
futures-locks = "0.7.1"
async-std = { version = "1.8.0", features = ["attributes"], optional = true }

# Logging
log = "0.4.14"
pretty_env_logger = "0.5"

# Sentry
sentry = "0.34"

# Core
revolt-result = { version = "0.7.19", path = "../result", optional = true }
