[package]
name = "revolt-config"
version = "0.8.6"
edition = "2021"
license = "MIT"
authors = ["Paul Makles <me@insrt.uk>"]
description = "Revolt Backend: Configuration"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
anyhow = ["dep:sentry-anyhow"]
report-macros = ["revolt-result"]
test = ["async-std"]
default = ["test", "anyhow"]

[dependencies]
# Utility
config = "0.13.3"
cached = "0.44.0"
once_cell = "1.18.0"

# Serde
serde = { version = "1", features = ["derive"] }

# Async
futures-locks = "0.7.1"
async-std = { version = "1.8.0", features = ["attributes"], optional = true }

# Logging
log = "0.4.14"
pretty_env_logger = "0.4.0"

# Sentry
sentry = "0.31.5"
sentry-anyhow = { version = "0.38.1", optional = true }

# Core
revolt-result = { version = "0.8.6", path = "../result", optional = true }
