[package]
name = "revolt-files"
version = "0.7.16"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Paul Makles <me@insrt.uk>"]
description = "Revolt Backend: S3 and encryption subroutines"

[dependencies]
base64 = "0.22.1"
aes-gcm = "0.10.3"
typenum = "1.17.0"

aws-config = "1.5.5"
aws-sdk-s3 = { version = "1.46.0", features = ["behavior-version-latest"] }

revolt-config = { version = "0.7.16", path = "../config", features = [
    "report-macros",
] }
revolt-result = { version = "0.7.16", path = "../result" }
