[package]
name = "revolt-files"
version = "0.7.19"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Paul Makles <me@insrt.uk>"]
description = "Revolt Backend: S3 and encryption subroutines"

[dependencies]
tracing = "0.1"

ffprobe = "0.4.0"
imagesize = "0.13.0"
tempfile = "3.12.0"

base64 = "0.22.1"
aes-gcm = "0.10.3"
typenum = "1.17.0"

# Can't update past these versions of aws-config and aws-sdk-s3 due to issue with rustc >1.78
# https://github.com/revoltchat/backend/issues/341
aws-config = "=1.5.5"
aws-sdk-s3 = { version = "=1.46.0", features = ["behavior-version-latest"] }

revolt-config = { version = "0.7.19", path = "../config", features = [
    "report-macros",
] }
revolt-result = { version = "0.7.19", path = "../result" }

# image processing
jxl-oxide = "0.10"
image = { version = "0.25.2" }

# svg rendering
usvg = "0.44.0"
resvg = "0.44.0"
tiny-skia = "0.11.4"

# encoding
webp = "0.3.0"
