[package]
name = "revolt-permissions"
version = "0.8.9"
edition = "2021"
license = "MIT"
authors = ["Paul Makles <me@insrt.uk>"]
description = "Revolt Backend: Permission Logic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bson = ["dep:bson"]
serde = ["dep:serde"]
schemas = ["dep:schemars"]
try-from-primitive = ["dep:num_enum"]


[dev-dependencies]
# Async
async-std = { version = "1.8.0", features = ["attributes"] }

[dependencies]
# Core
revolt-result = { version = "0.8.9", path = "../result" }

# Utility
auto_ops = "0.3.0"
once_cell = "1.17"
num_enum = { version = "0.6.1", optional = true }

# Async
async-trait = "0.1.51"

# Serialisation
serde = { version = "1", features = ["derive"], optional = true }
bson = { version = "2.1.0", optional = true }

# Spec Generation
schemars = { version = "0.8.8", optional = true }
