[package]
name = "revolt-presence"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
# Async
async-std = { version = "1.8.0", features = ["attributes"] }

[dependencies]
# Utility
log = "0.4.17"
rand = "0.8.5"
once_cell = "1.17.1"

# Redis
redis-kiss = "0.1.4"
