[package]
name = "revolt-presence"
version = "0.8.9"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Paul Makles <me@insrt.uk>"]
description = "Revolt Backend: User Presence"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
redis-is-patched = []

[dev-dependencies]
# Async
async-std = { version = "1.8.0", features = ["attributes"] }

# Config for loading Redis URI
revolt-config = { version = "0.8.9", path = "../config" }

[dependencies]
# Utility
log = "0.4.17"
rand = "0.8.5"
once_cell = "1.17.1"

# Redis
redis-kiss = "0.1.4"
